--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "command": "./node_modules/.bin/astro dev",
       "name": "Development server",
       "request": "launch",
-      "type": "node-termina"
+      "type": "node-terminal"
     }
   ]
 }
