--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@astrojs/tailwind": "^6.0.0",
     "@fontsource-variable/space-grotesk": "^5.1.0",
     "@fontsource/tourney": "^5.1.0",
-    "astro": "^5.0.0-beta.12",
-    "tailwindcss": "^3.4.15",
+    "astro": "5.2.3",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.32",
+    "autoprefixer": "^10.4.16"
   }
 }
